--- a/sass/common.scss
+++ b/sass/common.scss
@@ -1,7 +1,8 @@
 /*
  * Copyright (c) 2015 JKD TEAM (9koudai.net)
  * @Author: fcdcyy@sina.cn
- * @DateTime: 2015-04-17 08:56:26
+ *
+ * @DateTime: 2015-04-14 10:26:42
  */
 
 
