--- a/css/common.css
+++ b/css/common.css
@@ -2,7 +2,8 @@
 /*
  * Copyright (c) 2015 JKD TEAM (9koudai.net)
  * @Author: fcdcyy@sina.cn
- * @DateTime: 2015-04-17 08:56:26
+ *
+ * @DateTime: 2015-04-14 10:26:42
  */
 html, body, div, ul, ol, li, p, h2, h3, h4, span, input, textarea, select, option, table, tr, td, dd, dt, blockquote {
   padding: 0;
